<resources>
    <string name="app_name">Domácí sensory</string>

    <!-- Main Menu - Texts -->
    <string name="menu_text">Seznam senzorů</string>
    <string name="sensor_text_one">sensor je aktivní</string>
    <string name="sensor_text_more">sensory jsou aktivní</string>
    <string name="sensor_before_sync">Chvilku strpení dochází k syncrhonizaci</string>
    <string name="temperature">Teplotní senzor</string>
    <string name="humidity">Vlhkost</string>
    <string name="lights">Světla</string>
    <string name="doors">Dveře</string>
    <string name="alarm">Alarm</string>

    <!-- Login Menu - Texts -->
    <string name="Login_button">Přihlášení</string>
    <string name="username_hint">Uživatelské jméno</string>
    <string name="password_hint">Heslo</string>

    <!-- Register Menu - Texts -->
    <string name="RegistrationHeadline_text">Registrace</string>
    <string name="RegisterHere_text">Registrovat</string>
    <string name="Login_text">Přihlásit se s …</string>
    <string name="register_button">Registrovat!</string>
    <string name="YourUsername_hint">Uživatelské jméno</string>
    <string name="YourPassword_hint">Heslo</string>

    <!-- Temperature - Texts -->
    <string name="message_text">Data vypadají v pořádku!</string>
    <string name="temperature_value">22</string>
    <string name="temperature_mark">°C</string>
    <string name="position_text">Venkovní teplota</string>
    <string name="synchronization_text">Nyní</string>


    <!-- Image Descriptions -->
    <string name="temperature_description">TemperatureImgDescription</string>
    <string name="humidity_description">HumidityImgDescription</string>
    <string name="lights_description">LightsImgDescription</string>
    <string name="doors_description">DoorsImgDescription</string>
    <string name="sensor1_description">Sensor1ImgDescription</string>
    <string name="sensor2_description">Sensor2ImgDescription</string>

    <string name="login_description">LoginImgDescription</string>
    <string name="facebook_description">FacebookImgDescription</string>
    <string name="instagram_description">InstagramImgDescription</string>
    <string name="twitter_description">TwitterImgDescription</string>
    <string name="lock_description">LockImgDescription</string>
    <string name="user_description">UserImgDescription</string>

    <string name="user_photo_description">UserImgDescription</string>
    <string name="synchronization_description">SyncImgDescription</string>

</resources>
