<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ConstraintLayout"
        tools:context=".activities.TemperatureActivity"
        >


    <RelativeLayout
            android:background="@drawable/login_background"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

        <ImageView
                android:layout_height="150dp"
                android:layout_width="120dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/user_unknown"
                android:layout_marginTop="@dimen/topMargin50"
                android:id="@+id/imageView"
                android:contentDescription="@string/login_description"/>

        <EditText
                android:background="@color/textColorWhite"
                android:layout_height="40dp"
                android:layout_width="250dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/user_name"
                android:layout_above="@+id/password_name"
                android:layout_marginBottom="35dp"
                android:textSize="@dimen/textSize15"
                android:inputType="textPersonName"
                android:hint="@string/YourUsername_hint"
                android:textColorHint="@color/cardview_dark_background"
                android:ems="10"/>

        <EditText
                android:background="@color/textColorWhite"
                android:layout_height="40dp"
                android:layout_width="250dp"
                android:id="@+id/password_name"
                android:layout_marginBottom="130dp"
                android:inputType="textPassword"
                android:hint="@string/YourPassword_hint"
                android:ems="10"
                android:layout_alignStart="@+id/user_name"
                android:layout_alignBottom="@+id/cardView"
                android:textSize="@dimen/textSize15"
                android:textColorHint="@color/cardview_dark_background"/>


        <androidx.cardview.widget.CardView
                android:layout_height="50dp"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/cardView"
                android:layout_above="@+id/textView2"
                android:layout_marginBottom="@dimen/bottomMargin20"
                app:cardElevation="10dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="@color/colorBackgroundDark">


            <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/textView"
                        android:textSize="@dimen/textSize20"
                        android:textColor="@color/textColorWhite"
                        android:text="@string/register_button"
                        android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView2"
                android:layout_above="@+id/linearLayout"
                android:layout_marginBottom="@dimen/bottomMargin20"
                android:text="@string/Login_text"
                android:textSize="@dimen/textSize15"/>


        <LinearLayout
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_alignStart="@+id/imageView"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

            <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="30dp"
                    app:srcCompat="@drawable/facebook"
                    android:id="@+id/imageView4"
                    android:contentDescription="@string/facebook_description"/>

            <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="30dp"
                    app:srcCompat="@drawable/instagram"
                    android:id="@+id/imageView3"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/instagram_description"/>

            <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="30dp"
                    app:srcCompat="@drawable/twitter"
                    android:id="@+id/imageView2"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/twitter_description"/>

        </LinearLayout>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/username"
                android:id="@+id/imageView5"
                android:layout_toStartOf="@+id/user_name"
                android:layout_marginEnd="@dimen/rightMargin20"
                android:layout_alignBottom="@+id/user_name"
                android:layout_alignTop="@+id/user_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/leftMargin20"
                android:contentDescription="@string/user_description"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/lock"
                android:id="@+id/imageView6"
                android:layout_toStartOf="@+id/password_name"
                android:layout_marginEnd="@dimen/rightMargin20"
                android:layout_alignBottom="@+id/password_name"
                android:layout_alignTop="@+id/password_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/leftMargin20"
                android:contentDescription="@string/lock_description"/>

        <TextView
                android:text="@string/RegistrationHeadline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize25"
                android:textColor="@color/textColorWhite"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/topMargin50"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/leftMargin10"
                app:layout_constraintStart_toStartOf="parent"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

