<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ConstraintLayout"
        tools:context=".activities.TemperatureActivity"
        android:background="@color/colorBackground">


    <TextView
            android:text="@string/LoginHeadline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize25"
            android:textColor="@color/textColorWhite"
            android:textAlignment="textStart"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginStart="@dimen/leftMargin10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"/>

    <ImageView
            android:layout_height="150dp"
            android:layout_width="120dp"
            app:srcCompat="@drawable/paperplane"
            android:id="@+id/imageView"
            android:contentDescription="@string/login_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/username"
            android:id="@+id/imageView5"
            android:contentDescription="@string/user_description"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <EditText
            android:background="@color/colorBackgroundLight"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:id="@+id/editText"
            android:textSize="@dimen/textSize15"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/lock"
            android:id="@+id/imageView6"
            android:contentDescription="@string/lock_description"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>

    <EditText
            android:background="@color/colorBackgroundLight"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:id="@+id/editText2"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:ems="10"
            android:textSize="@dimen/textSize15"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/Login_text"
            android:textSize="@dimen/textSize15"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            android:layout_marginBottom="16dp"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textView"
            android:textSize="@dimen/textSize20"
            android:textColor="@color/textColorWhite"
            android:text="@string/Login_button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="180dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            app:srcCompat="@drawable/facebook"
            android:id="@+id/imageView4"
            android:contentDescription="@string/facebook_description"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"/>

    <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            app:srcCompat="@drawable/instagram"
            android:id="@+id/imageView3"
            android:contentDescription="@string/instagram_description"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            app:srcCompat="@drawable/twitter"
            android:id="@+id/imageView2"
            android:contentDescription="@string/twitter_description"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="8dp"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            android:text="@string/Login_button"
            android:textColor="@color/textColorWhite"
            android:background="@drawable/button_background"
            android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

