<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ConstraintLayout"
        tools:context=".activities.TemperatureActivity">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/house_photo"
            android:id="@+id/imageHouse"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_text"/>

    <ImageView
            android:id="@+id/userUnknown"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/user_photo_description"
            app:layout_constraintTop_toTopOf="@+id/imageHouse"
            app:srcCompat="@drawable/user_unknown"
            app:layout_constraintBottom_toTopOf="@+id/imageHouse"
            app:layout_constraintEnd_toEndOf="@+id/imageHouse"
            android:layout_marginEnd="20dp"/>

    <TextView
            android:text="@string/menu_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_text"
            android:textSize="@dimen/textSize25"
            android:textColor="@color/textColorBlue"
            android:textAlignment="textStart"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/leftMargin10"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/sensor_text_one"
            android:id="@+id/sensors_active"
            android:textSize="@dimen/textSize15"
            android:textColor="@color/textColorWhite"
            android:background="@color/newsInformationBackground"
            android:textAlignment="textStart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10px"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageHouse"
            app:layout_constraintBottom_toBottomOf="@+id/imageHouse"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/home_recyclerview"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageHouse"/>


</androidx.constraintlayout.widget.ConstraintLayout>

